[package]
name = "discord-bot"
version = "0.1.0"
authors = ["danielrees"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", features = ["framework", "standard_framework", "rustls_backend"] }
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
regex = "1.4.3"

